[package]
name = "mercury"
description = "A CLI-based RSS reader written in rust"
version = "0.1.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/richardbrodie/mercury"
authors = ["Richard Brodie <richard@radagast.nu>"]

[dependencies]
base64 = "^0.9.3"
dirs = "*"
dotenv = "^0.13.0"
lazy_static = "1.1.0"
log = "^0.4.0"
num_cpus = "^1.8.0"
pretty_env_logger = "^0.2.4"
regex = "^1.0.0"
serde = "^1.0.70"
serde_derive = "^1.0.70"
serde_json = "^1.0.22"
serde_yaml = "*"
